// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LabeledTextField should render correctly with error 1`] = `
<div
  className="rows"
>
  <label
    htmlFor="test-with-error"
  >
    <p
      className="MuiTypography-root MuiTypography-body1 css-4sq7ol-MuiTypography-root"
      style={{}}
    >
      <b>
        test label
      </b>
    </p>
  </label>
  <p
    className="MuiTypography-root MuiTypography-body1 css-4sq7ol-MuiTypography-root"
    style={{}}
  >
    placeholder expected to appear between label and field
  </p>
  <div
    className="MuiFormControl-root MuiTextField-root css-1xp5r68-MuiFormControl-root-MuiTextField-root"
  >
    <div
      className="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary Mui-error MuiInputBase-formControl css-quhxjy-MuiInputBase-root-MuiOutlinedInput-root"
      onClick={[Function]}
    >
      <input
        aria-invalid={true}
        autoFocus={false}
        className="MuiInputBase-input MuiOutlinedInput-input css-16wblaj-MuiInputBase-input-MuiOutlinedInput-input"
        disabled={false}
        id="test-with-error"
        onAnimationStart={[Function]}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        required={false}
        type="text"
        value="wrong test value"
      />
      <fieldset
        aria-hidden={true}
        className="MuiOutlinedInput-notchedOutline css-1ll44ll-MuiOutlinedInput-notchedOutline"
      >
        <legend
          className="css-w4cd9x"
        >
          <span
            aria-hidden={true}
            className="notranslate"
          >
            ​
          </span>
        </legend>
      </fieldset>
    </div>
  </div>
</div>
`;

exports[`LabeledTextField should render correctly with text 1`] = `
<div
  className="rows"
>
  <label
    htmlFor="test-id"
  >
    <p
      className="MuiTypography-root MuiTypography-body1 css-rizt0-MuiTypography-root"
      style={{}}
    >
      <b>
        test label
      </b>
    </p>
  </label>
  <div
    className="MuiFormControl-root MuiTextField-root css-1xp5r68-MuiFormControl-root-MuiTextField-root"
  >
    <div
      className="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-formControl css-quhxjy-MuiInputBase-root-MuiOutlinedInput-root"
      onClick={[Function]}
    >
      <input
        aria-invalid={false}
        autoFocus={false}
        className="MuiInputBase-input MuiOutlinedInput-input css-16wblaj-MuiInputBase-input-MuiOutlinedInput-input"
        disabled={false}
        id="test-id"
        onAnimationStart={[Function]}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        required={false}
        type="text"
        value="test value"
      />
      <fieldset
        aria-hidden={true}
        className="MuiOutlinedInput-notchedOutline css-1ll44ll-MuiOutlinedInput-notchedOutline"
      >
        <legend
          className="css-w4cd9x"
        >
          <span
            aria-hidden={true}
            className="notranslate"
          >
            ​
          </span>
        </legend>
      </fieldset>
    </div>
  </div>
</div>
`;
